# ex(p) p(ca) p(recision)
# Temporary experiment about numeric precision of my PCA implementation.
#
cmake_minimum_required(VERSION 3.2)

project("expp")

# Add source to this project's executable.
add_executable(expp "expp.cpp" "expp.h")

# TODO: Add tests and install targets if needed.
